[gd_scene load_steps=5 format=1]

[ext_resource path="res://Titlescreen.gd" type="Script" id=1]
[ext_resource path="res://Level.tscn" type="PackedScene" id=2]
[ext_resource path="res://grassLevel.tscn" type="PackedScene" id=3]
[ext_resource path="res://credits.tscn" type="PackedScene" id=4]

[node name="Titlescreen" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )
first = ExtResource( 2 )
grass = ExtResource( 3 )
credits = ExtResource( 4 )

[node name="RichTextLabel1" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 157.0
margin/top = 52.0
margin/right = 297.0
margin/bottom = 100.0
bbcode/enabled = true
bbcode/bbcode = "[i]help Woblinsky regain his wobbliness[/i]"
visible_characters = -1
percent_visible = 1.0

[node name="RichTextLabel" type="RichTextLabel" parent="."]

anchor/left = 3
anchor/right = 3
rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 81.0
margin/top = 25.0
margin/right = -39.0
margin/bottom = 44.0
bbcode/enabled = true
bbcode/bbcode = "[b][u]WOBBLEQUEST[/u][/b]"
visible_characters = -1
percent_visible = 1.0

[node name="Credits" type="LinkButton" parent="."]

rect/scale = Vector2( 0.75, 0.75 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 183.0
margin/top = 237.0
margin/right = 223.0
margin/bottom = 251.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Credits"
underline = 2

[node name="Button" type="Button" parent="."]

focus_neighbour/left = NodePath("../Button1")
focus_neighbour/right = NodePath("../Button 2")
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 72.0
margin/top = 191.0
margin/right = 142.0
margin/bottom = 231.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start"
flat = false

[node name="Button 2" type="Button" parent="."]

focus_neighbour/left = NodePath("../Button")
focus_neighbour/right = NodePath("../Button1")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 143.0
margin/top = 201.0
margin/right = 253.0
margin/bottom = 221.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "grass mode: off"
flat = false

[node name="Button1" type="Button" parent="."]

focus_neighbour/left = NodePath("../Button 2")
focus_neighbour/right = NodePath("../Button")
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 255.0
margin/top = 191.0
margin/right = 331.0
margin/bottom = 231.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false

[node name="Label" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 262.0
margin/top = 177.0
margin/right = 322.0
margin/bottom = 232.0
text = "Press
Alt + F4
Dumbass"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="Button 2" to="." method="_on_Button_2_pressed"]

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]


